--- a/v0.3.2update.md
+++ b/v0.3.2update.md
@@ -71,3 +71,14 @@ sudo systemctl enable wardend
 sudo systemctl restart wardend
 journalctl -fu wardend -o cat
 ```
+
+If your server is not good enough and you are facing with the exit codes, try this snapshot taken from WardenKeepers snapshot.
+```
+sudo systemctl stop wardend.service
+
+wardend tendermint unsafe-reset-all --home $HOME/.warden
+rm -fR $HOME/.warden/wasm
+curl -L https://buenavista-genesis.s3.eu-west-1.amazonaws.com/warden-snaphot.tar.lz4 | lz4 -dc - | tar -xf - -C "$HOME/.warden"
+
+sudo systemctl restart wardend.service
+```
