--- a/v0.3.2update.md
+++ b/v0.3.2update.md
@@ -80,5 +80,7 @@ wardend tendermint unsafe-reset-all --home $HOME/.warden
 rm -fR $HOME/.warden/wasm
 curl -L https://buenavista-genesis.s3.eu-west-1.amazonaws.com/warden-snaphot.tar.lz4 | lz4 -dc - | tar -xf - -C "$HOME/.warden"
 
-sudo systemctl restart wardend.service
+sudo systemctl daemon-reload
+sudo systemctl restart wardend
+journalctl -fu wardend -o cat
 ```
