--- a/v0.3.2update.md
+++ b/v0.3.2update.md
@@ -72,7 +72,7 @@ sudo systemctl restart wardend
 journalctl -fu wardend -o cat
 ```
 
-If your server is not good enough and you are facing with the exit codes, try this snapshot taken from WardenKeepers snapshot.
+If your server is not good enough and you are facing with the exit codes, try this snapshot taken from WardenKeepers.
 ```
 sudo systemctl stop wardend.service
 
